--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,13 @@
-.App {
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
+.custom-phone-input input {
+  height: 48px;
+  /* Set the desired height */
+}
+
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +44,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
